# mcp-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  02-mcp-gateway.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  STATUS.md  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  fly.toml  mutmut_config.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
config/: policies.yaml
demo/: claude_desktop_config.json  script.md
docs/: architecture.md  operations.md
docs/blog/: building-production-grade-mcp-gateway.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-04-29-mcp-gateway.md
docs/superpowers/specs/: 2026-04-29-mcp-gateway-design.md
gateway/: __init__.py  cli.py  config.py  mcp_http.py  mcp_stdio_proxy.py  server.py
gateway/approval/: notifier.py  notify_pg.py  store.py  telegram.py  telegram_bot.py  timeout.py  websocket.py
gateway/audit/: reader.py  redaction.py  writer.py
gateway/auth/: __init__.py  exceptions.py  oauth_models.py  token_validator.py
gateway/db/: base.py  models.py  session.py
gateway/middleware/: approve.py  audit.py  authenticate.py  authorize.py  chain.py  execute.py  rate_limit.py  security_headers.py
gateway/observability/: logging.py  metrics.py  tracing.py
gateway/policy/: evaluator.py  loader.py  schema.py
gateway/tenants/: middleware.py
gateway/tools/: crm.py  dispatch.py  exceptions.py  payments.py  registry.py  upstream.py
gateway/web/: routes.py
gateway/web/static/: styles.css
gateway/web/templates/: _approvals_list.html  _audit_rows.html  approvals.html  audit.html  base.html
loadtest/: README.md  locustfile.py
mocks/crm/: Dockerfile  fly.toml  main.py
mocks/idp/: Dockerfile  fly.toml  keys.py  main.py  pyproject.toml
mocks/payments/: Dockerfile  fly.toml  main.py
observability/: prometheus.yml
observability/grafana/dashboards/: mcp-gateway.json
tests/: conftest.py
tests/approval/: test_store.py  test_store_listen_notify.py
tests/audit/: test_reader.py  test_redaction.py  test_writer.py
tests/auth/: test_token_validator.py
tests/db/: test_schema.py
tests/e2e/: test_full_flow.py
tests/middleware/: test_chain.py  test_rate_limit.py  test_security_headers.py
tests/mocks/: test_mock_crm.py  test_mock_idp.py  test_mock_payments.py
tests/observability/: test_logging.py
tests/policy/: test_evaluator.py  test_evaluator_conditions.py  test_loader.py
tests/security/: test_audit_immutability.py  test_jwt_attacks.py  test_tenant_isolation.py
tests/tenants/: test_middleware.py
tests/tools/: test_upstream.py
tests/web/: test_audit_route.py  test_decide_route.py  test_mcp_http_transport.py  test_tenant_selector.py
