[project]
name = "mock-idp"
version = "0.1.0"
description = "Mock OAuth 2.1 IdP with Dynamic Client Registration for MCP Gateway dev/test."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
